<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="dollar">$</string>
    <string name="sale_text">Sale</string>
    <string name="tip_amt_text">Tip</string>
    <string name="total_text">Total</string>
    <string name="action_about">Help and feedback</string>

    <string name="custom_dialog_title">Custom percentage</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="clear_button_text">Reset</string>
    <string name="round_button_text">Round</string>

    <string name="add" translatable="false">\u002b</string>
    <string name="subtract" translatable="false">\u2014</string>

    <string name="split_check_title_even">Split the check among</string>
    <string name="split_check_title_uneven">Calculate individual totals for</string>
    <string name="people">\u0020people</string>
    <string name="per_person">\u0020per person</string>
    <string name="tip_per">\u0020from tips</string>

    <string name="person_list_title_person">Person</string>
    <string name="person_list_title_items">Item Price</string>
    <string name="person_list_subtotal">Subtotal</string>

    <string name="even_split_button_text">Even splits</string>
    <string name="uneven_split_button_text">Uneven splits</string>

    <string name="settings_text">Settings</string>

    <string name="pref_unit_label">Unit of currency</string>
    <string name="pref_unit_key" translatable="false">units</string>
    <string name="pref_unit_default" translatable="false">$</string>
    <string name="pref_unit_message">Up to 3 characters</string>
    <string name="pref_unit_title">Pick a unit of currency</string>

    <string name="pref_percents_label">Tip percentage values</string>
    <string name="pref_percents_key" translatable="false">percents</string>
    <string name="pref_percents_default" translatable="false">15,18,20</string>
    <string name="pref_percents_message">List numbers separated by commas.</string>
    <string name="pref_percents_title">Choose the default % values</string>

    <string name="pref_people_label">Default split check count</string>
    <string name="pref_people_key" translatable="false">people</string>
    <string name="pref_people_default" translatable="false">2</string>
    <string name="pref_people_message">First number of people displayed when splitting the check. 2 people minimum</string>
    <string name="pref_people_title">Enter how many people</string>

    <string name="pref_default_label">Default percent value</string>
    <string name="pref_default_key" translatable="false">default</string>
    <string name="pref_default_default" translatable="false">15</string>
    <string name="pref_default_message">This is the percentage selected by default.</string>
    <string name="pref_default_title">Enter a number</string>

    <string name="pref_tax_label">Sales tax rate</string>
    <string name="pref_tax_key" translatable="false">tax</string>
    <string name="pref_tax_default" translatable="false">0</string>
    <string name="pref_tax_message">Put the restaurant sales tax for your area as a percentage (like 8.25).</string>
    <string name="pref_tax_title">Enter sales tax</string>

    <string name="general_help_text">Enter in the amount of the sale. Editing any other
        blank will cause the rest to fill in.</string>
    <string name="functions_help_text"><![CDATA[  Clear all the values with
        <font color=#919191>RESET</font>, or round the total to the nearest whole dollar value with
        <font color=#3ea8c3>ROUND</font>.]]></string>
    <string name="split_help_text"><![CDATA[  Tap the + <font color="#8BC34A">button</font> to
        toggle splitting the check. Tap again to hide.]]></string>
    <string name="uneven_help_text"><![CDATA[  Tap <font color="#3ea8c3">UNEVEN SPLITS</font> in the split
    check card to switch to an uneven split format. Enter in the sales tax (or have it calculated by
    entering in your local tax rate in the settings) and then enter in the cost of the things each
    person ordered.]]></string>
    <string name="send_feedback_text">Send Feedback</string>
    <string name="inquiry_text">Any bugs or suggestions? Leave a review or use the developer email listed there! Thanks!</string>
    <string name="contact_button_text">Play Store link</string>
</resources>
