<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AboutTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            style="@style/AboutParagraphs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_help_text" />

        <TextView
            android:id="@+id/function_help"
            style="@style/AboutParagraphs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/split_help"
            style="@style/AboutParagraphs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AboutTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback_text" />

        <TextView
            style="@style/AboutParagraphs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inquiry_text" />

        <Button
            android:id="@+id/feedback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_button_text" />

    </LinearLayout>

</ScrollView>