<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/calculator_card"
                style="@style/CardStyle"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:id="@+id/calc_elements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout style="@style/CalculatorRows">

                        <TextView
                            android:id="@+id/dollar1"
                            style="@style/DollarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dollar" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/sale_amount"
                            style="@style/NumberStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:hint="@string/sale_text"
                            android:nextFocusDown="@+id/percent_amount_spinner"
                            android:nextFocusForward="@+id/percent_amount_spinner"
                            app:met_textColor="@color/blue_gray">

                            <requestFocus />

                        </com.rengwuxian.materialedittext.MaterialEditText>

                    </LinearLayout>

                    <LinearLayout style="@style/CalculatorRows">

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/percent_amount_spinner"
                            style="@style/PercentSpinner"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginRight="32dp"
                            android:layout_weight="3"
                            android:focusable="true"
                            android:focusableInTouchMode="true" />

                        <TextView
                            android:id="@+id/dollar2"
                            style="@style/DollarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dollar" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/tip_amount"
                            style="@style/NumberStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/tip_amt_text"
                            app:met_textColor="@color/light_green" />

                    </LinearLayout>

                    <LinearLayout style="@style/CalculatorRows">

                        <TextView
                            android:id="@+id/dollar3"
                            style="@style/DollarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dollar" />

                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/total_amount"
                            style="@style/NumberStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/total_text"
                            app:met_textColor="@color/green" />

                    </LinearLayout>

                    <LinearLayout
                        style="@style/CalculatorRows"
                        android:gravity="end"
                        android:padding="0dp">

                        <Button
                            android:id="@+id/clear_button"
                            style="@style/FunctionButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clear_button_text"
                            android:textColor="@color/gray" />

                        <Button
                            android:id="@+id/round_button"
                            style="@style/FunctionButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/round_button_text"
                            android:textColor="@color/blue" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/split_card"
                style="@style/CardStyle"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <RelativeLayout
                            android:id="@+id/split_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/split_title"
                                style="@style/SplitCheckText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_centerHorizontal="true"
                                android:text="@string/split_check_title_even" />

                            <Button
                                android:id="@+id/take_people"
                                style="@style/IncrementButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_below="@+id/split_title"
                                android:layout_toLeftOf="@+id/people_count"
                                android:text="@string/subtract" />

                            <TextView
                                android:id="@+id/people_count"
                                style="@style/SplitCheckText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/split_title"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="6dp"
                                android:padding="8dp" />

                            <Button
                                android:id="@+id/add_people"
                                style="@style/IncrementButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_below="@+id/split_title"
                                android:layout_toRightOf="@+id/people_count"
                                android:text="@string/add" />

                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/even_split_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="24dp">

                            <TextView
                                android:id="@+id/split_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/green"
                                android:textSize="44sp" />

                            <TextView
                                style="@style/SplitCheckText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/per_person" />

                            <TextView
                                android:id="@+id/split_tip"
                                style="@style/SplitCheckText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="24dp"
                                android:textColor="@color/light_green" />

                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/uneven_split_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/dollar4"
                                style="@style/DollarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@+id/sales_tax"
                                android:layout_alignParentLeft="true"
                                android:paddingBottom="12dp"
                                android:paddingRight="4dp"
                                android:text="@string/dollar" />

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/sales_tax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_toRightOf="@+id/dollar4"
                                android:gravity="center"
                                android:hint="Sales Tax"
                                android:inputType="numberDecimal"
                                app:met_floatingLabel="highlight"
                                app:met_underlineColor="@color/gray" />

                            <TableLayout
                                android:id="@+id/people_list"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_below="@id/sales_tax"
                                android:orientation="vertical" />

                        </RelativeLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/split_type_button"
                        style="@style/FunctionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uneven_split_button_text"
                        android:textColor="@color/blue" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


    <FrameLayout
        android:id="@+id/fab"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center">

        <Button
            android:id="@+id/split_button"
            style="@style/FAB" />

        <View
            android:id="@+id/fab_plus"
            style="@style/FabPlus"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@drawable/fab_plus" />

    </FrameLayout>

</RelativeLayout>